--- a/.github/workflows/Nameless-OPlus-SM8250-Kernel.yml
+++ b/.github/workflows/Nameless-OPlus-SM8250-Kernel.yml
@@ -44,6 +44,9 @@ jobs:
         KSU_VERSION=$(cd KernelSU-Next && expr $(/usr/bin/git rev-list --count HEAD) + 10200)
 
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b kernel-4.19
+        cd susfs4ksu
+        git switch 701c65b2
+        cd ..
         cp ./susfs4ksu/kernel_patches/include/linux/susfs.h $GITHUB_WORKSPACE/kernel_workspace/android-kernel/include/linux/
         cp ./susfs4ksu/kernel_patches/include/linux/susfs_def.h $GITHUB_WORKSPACE/kernel_workspace/android-kernel/include/linux/
         cp ./susfs4ksu/kernel_patches/fs/susfs.c $GITHUB_WORKSPACE/kernel_workspace/android-kernel/fs/
